# TCC

./: # File Tree: TCC.md  .cursorrules  .gitignore  11-Artigos.xlsx  CRONOGRAMA.md  CRONOGRAMA_CODIGO.md  GUIA_REPOSITORIO_PROFESSOR.md  Planilha de Artigos.url  PropostasPFC.rar  TCC - Overleaf.url  importCommands.md  ~$otações.docx
codigo/pipeline/: ANALISE_MELHORIAS.md  COMANDOS_RODAR_TUDO.md  CORRECOES_TREINAMENTO.md  DIAGNOSTICO_FOLD3_PETR4.md  ESTRATEGIA_PROXIMOS_PASSOS.md  GUIA_EXECUCAO.md  GUIA_MELHORIAS.md  MELHORIAS_IMPLEMENTADAS.md  PROXIMOS_PASSOS.md  README.md  RESUMO_MELHORIAS.md  TESTE_RAPIDO.md  pyproject.toml  requirements.txt  retreinar_completo.sh  rodar_pipeline_completo.sh  treinar_outros_ativos.sh
codigo/pipeline/data/: README.md
codigo/pipeline/data/backtest/: ITUB4_fold1_long_only_20260202_183433.csv  ITUB4_fold1_long_only_20260207_172037.csv  ITUB4_fold1_long_only_20260211_113256.csv  ITUB4_fold1_long_short_20260202_183430.csv  ITUB4_fold1_long_short_20260207_172044.csv  ITUB4_fold1_long_short_20260207_172143.csv  ITUB4_fold1_long_short_20260211_113301.csv  ITUB4_fold1_long_short_20260211_113337.csv  ITUB4_fold1_long_short_sensibilidade_20260207_172143.csv  ITUB4_fold1_long_short_sensibilidade_20260211_113337.csv  ITUB4_fold2_long_only_20260202_183441.csv  ITUB4_fold2_long_only_20260207_172050.csv  ITUB4_fold2_long_only_20260211_113306.csv  (+89 more)
codigo/pipeline/scripts/: rodar_todos_backtests.sh  rodar_treino_wsl.sh  treinar_e_desligar.sh  treinar_folds_4_5.sh  wsl_cuda_fix.txt
codigo/pipeline/src/: __init__.py  config.py  train.py
(+165 files in other folders)
