[project]
name = "pipeline-tcc"
version = "0.1.0"
description = "Pipeline de predição automática de indicativos financeiros para B3 - TCC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "tensorflow>=2.14.0",
    "optuna>=3.0.0",
    "prophet>=1.1.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = ["src"]

